# MyCode

./: README.md
5lab/Controller/: Command_File.h  Command_Reader.h
5lab/Event_Groups/: Event_Interface.h
5lab/Logs/: Console_Output.h  File_Output.cpp  Logger.cpp
CTxt/: README.md
CTxt/src/: Dudko_Maksim_cw.c
MAMIN/: CMakeLists.txt  main.cpp
MAMIN/Controller/: Command_Reader.cpp  Controller_p.cpp  Controller_p.h
MAMIN/Events/: Event_Bonus_Coin.cpp  Event_Bonus_Coin.h  Event_Bonus_Potion.h  Event_Damage_Arrow.h  Event_Damage_Skull.cpp  Event_ELse_None.cpp
MAMIN/FieldCell/: Cell.cpp  Cell.h  Field.cpp
Platformer/: README.md
Platformer/5lab/: Player.cpp  main.cpp
Platformer/5lab/Event_Groups/: Event_Interface.cpp
Platformer/5lab/Events/: Event_Bonus_Potion.cpp  Event_ELse_None.h  Event_Else_Player.cpp
Platformer/5lab/Field_Gen/: Rule_Player_Position.cpp
Platformer/5lab/Logs/: Console_Output.cpp
Platformer/src/: Drawer.cpp  Drawer.h  Player.h
Platformer/src/Controller/: Command_File.cpp  Command_Interface.h  Command_Reader.cpp  Control_Console.cpp  Control_Console.h  Controller_p.cpp  Controller_p.h
Platformer/src/Event_Groups/: Event_Group_Bonus.cpp  Event_Group_Bonus.h  Event_Group_Damage.cpp  Event_Group_Damage.h  Event_Group_Else.cpp  Event_Group_Else.h
Platformer/src/Events/: Event_Bonus_Key.h  Event_Damage_Arrow.cpp  Event_Damage_Skull.h  Event_Else_Player.h  Event_Else_Wall.cpp  Event_Else_Wall.h
Platformer/src/FieldCell/: Cell.cpp  Cell.h  Field.h  (+1 more)
RESTAPIConsumer/: pom.xml
RestApp/: README.md  pom.xml
RestConsumer/: README.md
SpringBase/: README.md
SpringBase/src/: pom.xml
Spring_CRUD_JDBC/: README.md  pom.xml
Spring_CRUD_JPA/: pom.xml
untitled/: CMakeLists.txt  Cell.cpp  Cell.h  Controller.cpp  Controller.h  Drawer.cpp  Drawer.h  Event_Damage_Arrow.cpp  Event_Damage_Arrow.h  Event_Damage_Skull.cpp  Event_Damage_Skull.h  Event_Group_Bonus.cpp  Event_Group_Bonus.h  Event_Group_Damage.h  Event_Interface.cpp  Event_Interface.h  Field.cpp  Field.h  Player.cpp  Player.h  main.cpp
untitled/Controller/: Command_Reader.h  Controller_p.cpp  Controller_p.h
untitled/Event_Groups/: Event_Group_Damage.cpp
untitled/Events/: Event_Bonus_Key.cpp
untitled/FieldCell/: Field.h
untitled/Field_Gen/: Field_Generator.h  Rule_Player_Position.h  Rule_Potion.cpp  Rule_Potion.h  Rule_Skull.cpp
untitled/Logs/: Intreface_output.h  Logger.h
(+83 files in other folders)
